Attempt to fix gradle issues due to java version